[package]
name = "uri"
version = "0.4.0"
authors = ["Jean Pierre Dudey <me@jeandudey.tech>"]
edition = "2018"
readme = "README.md"
description = """
Deprecated, use url crate instead
"""
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/uri"
homepage = "https://jeandudey.tech"

[dependencies]
